--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=eureka-client-consumer
+spring.application.name=eureka-client
 server.port=8090
 eureka.instance.hostname=127.0.0.1
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8001/eureka/,http://127.0.0.1:8002/eureka/
