--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/testgenerate?useUnicode=true&c
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#banner图标关闭
+#spring.main.banner-mode=off
+#日志编码颜色
+spring.output.ansi.enabled=always
