--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,28 @@
-spring.application.name=eureka-client
-server.port=8090
-eureka.instance.hostname=127.0.0.1
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8001/eureka/,http://127.0.0.1:8002/eureka/
+spring.application.name=apollo-client-feifei
+spring.profiles.active=DEV
+server.port=10110
 
+
+eureka.instance.hostname=test-feifei
+eureka.client.serviceUrl.defaultZone=http://49.232.58.85:8080/eureka/
+#eureka.client.healthcheck.enabled=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.eurekaServiceUrlPollIntervalSeconds=60
+
+eureka.instance.preferIpAddress=true
+
+app.id=SampleApp
+apollo.bootstrap.enabled = true
+#apollo.bootstrap.namespaces = application,FX.apollo,application.yml
+#apollo.bootstrap.eagerLoad.enabled=true
+
+
+#mybatisŒª÷√≈‰÷√
 mybatis.mapper-locations= classpath:mapper/*.xml
 mybatis.type-aliases-package=eurekaserver.server.pojo
 
+#datasource≈‰÷√
 spring.datasource.url=jdbc:mysql://localhost:3306/testgenerate?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
@@ -13,5 +30,12 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #bannerÕº±Íπÿ±’
 #spring.main.banner-mode=off
+
 #»’÷æ±‡¬Î—’…´
 spring.output.ansi.enabled=always
+
+spring.kafka.bootstrap-servers=szq-ops-kafkab-01.cc.kuyun.com:9092,szq-ops-kafkab-02.cc.kuyun.com:9092,szq-ops-kafkab-03.cc.kuyun.com:9092,szq-ops-kafkab-04.cc.kuyun.com:9092
+spring.kafka.client-id=ktap-ad-tracking-client
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+kafka.topic=ktap-impress-track-limitation
